# elab

./: README.md  code  elab.cabal  stack.yaml
src/Language/Haskell/: Elab.hs
src/Language/Haskell/Elab/: Internal.hs  Logic.hs
src/Language/Haskell/Elab/Internal/: Proof.hs
